--- a/client/src/pages/inventory/Inventory.module.css
+++ b/client/src/pages/inventory/Inventory.module.css
@@ -12,6 +12,11 @@
   justify-content: space-between;
   align-items: center;
 }
+.inventoryHeader a {
+  text-decoration: none;
+  color: #1976d2;
+  font-size: 0.9rem;
+}
 
 .btnLogout {
   margin-left: 1rem;
