Enhances layout and mobile experience
Sets viewport maximum-scale to improve mobile usability.
Changes '.bottom' element to sticky positioning for a better
layout experience while removing transform property to
simplify alignment logic.

--- a/client/src/pages/inventory/Inventory.module.css
+++ b/client/src/pages/inventory/Inventory.module.css
@@ -265,7 +265,7 @@
 }
 
 .bottom {
-  position: absolute;
+  position: sticky;
   bottom: 0;
   left: 50%;
   width: 100%;
@@ -277,7 +277,7 @@
   align-items: center;
   max-width: 900px;
   justify-content: space-between;
-  transform: translateX(-50%);
+  /*transform: translateX(-50%);*/
 }
 .bottom a {
   border-radius: 100px;
