--- a/client/src/pages/use/Use.module.css
+++ b/client/src/pages/use/Use.module.css
@@ -117,6 +117,16 @@
 
 .itemSelect {
   width: 100px;
+  display: flex;
+  gap: 2px;
+}
+.itemSelect_btn {
+  background: #e0e0e0;
+  border-radius: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
 }
 
 .quantityInput {
