Add drink management features
Implements CRUD operations for managing drinks and drink types,
including creating, updating, and consuming drinks. Introduces
new pages for managing drinks and drink types, and updates
navigational elements to include these new features. Adds
server-side controllers and routes to support drink-related API
endpoints, enhancing the application's user capabilities related
to drink inventory and management.

--- a/client/src/pages/home/Home.module.css
+++ b/client/src/pages/home/Home.module.css
@@ -5,9 +5,10 @@
   gap: 10px;
   padding: 10px;
   box-sizing: border-box;
-  height: 100vh;
+  /*height: 100vh;*/
   align-items: center;
   justify-content: center;
+  margin: auto 0;
 }
 .home_btn {
   width: calc(50% - 5px);
